# Multi-Language-Compiler

./: CMakeLists.txt  README.md  assembly_generator.c  assembly_generator.h  cursor_request_for_code_fix_details.md  index.html  input.cpp  instructions.txt  ir.h  ir_generator.c  ir_generator.h  ir_printer.c  lexer.c  lexer.h  main.c  main.cpp  output.asm  parser.c  parser.cpp  parser.h  script.js  style.css  symbol_table.json  temp_manager.c  trace.json  tree.json
SampleFiles/: input1.cpp  input2.cpp  input3.cpp  input4.cpp
include/: Node.h  Parser.h  SymbolTable.h  Token.h  Tokenizer.h  TraceGenerator.h
src/: Node.cpp  Parser.cpp  SymbolTable.cpp  Tokenizer.cpp  TraceGenerator.cpp
